2003-05-16  Jens Petersen  <petersen@redhat.com>

	* mk/library.mk: Introduce DESTDIR variable for installing into a
	staging area or buildroot.
	(installdirs): Prefix dirs with DESTDIR.
	(installfiles): Prefix DESTDIR to destinations.
	(uninstallfiles): Add DESTDIR here too for good measure.

	* gtk/treeList/TreeView.chs: Documentation formatting fixes.

	* gtk/pango/PangoLayout.chs (layoutSetWidth): Fix doc typo.

	* gtk/general/Structs.hsc: Documentation fixes: s/@con/@constructor/.

	* doc/Makefile (html%): Only depend on the xml file for the target
	to be transformed.

	* gtk2hs.spec.in (Release): Append date for snapshot packages.
	(install): Use DESTDIR.
	(post): Hence no longer need to filter out buildroot prefix from
	pkg config files.
	(preun): Only remove ghc pkg configs when removing rpm package.

	* Makefile (dist): Add spec file as dependency.
	(rpm): Depend on dist target not tarball.
	(srpm): Ditto.
	(gtk2hs.spec): Target to generate spec file.

2003-05-10  Jens Petersen  <petersen@redhat.com>

	* mk/library.mk (install): Weaken to an install suitable for
	packaging in a buildroot, ie do not install the package config
	file into the buildroot.
	(installfiles): Install package config file too.
	(installpackage): Rename to "$(PACKAGENAME).conf".  Write pkg config
	to target, rather than installing directly in compiler's packages
	list.
	(install-pkg): New target.  Installs pkg config file into
	compiler's packages list.
	(uninstall): New target.  Unstalls files and removes package from
	compiler's packages list.
	($(TARGETOK)): Remove $(PACKAGENAME).conf so that it will be
	regenerated.

2003-05-09 Axel Simon <A.Simon@kent.ukc.ac.uk>

	* mk/common.mk: Run hsc2hs only with the libraries in CFLAGS not
	with other optimization/debugging options happening to be in
	there.

2003-05-08  Jens Petersen  <petersen@redhat.com>

	* gtk/treeList/TreeSelection.chs (onChanged): Renamed
	to onSelectionChanged since it conflicted with TextBuffer export.